<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="infozonaorg.com.testnode.MainActivity">

    <Button
        android:text="@string/btnMapaCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnMapa"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/btnIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/btnLogin"
        android:layout_below="@+id/btnMapa"
        android:layout_alignStart="@+id/btnMapa"
        android:layout_alignEnd="@+id/btnMapa" />

    <Button
        android:text="@string/title_activity_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSignUp"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp" />
</RelativeLayout>
